Changelog
=========


2.4.4 (unreleased)
------------------

- Nothing changed yet.


2.4.3 (2020-10-08)
------------------

- Fix scale generation of DX Images in TinyMCE [Nachtalb]


2.4.2 (2020-09-16)
------------------

- Add missing documentDate indexer for dexterity file [Nachtalb]
  Reindexing has to be done manually if necessary for your installation.


2.4.1 (2020-09-09)
------------------

- Fix saving file with whole windows file path as filename when uploading through Microsoft Edge [Nachtalb]
- Fix JS load order issue [Nachtalb]


2.4.0 (2020-09-03)
------------------

- Reimplement drag'n'drop feature for Plone 5 and 4 [Nachtalb]


2.3.2 (2020-07-01)
------------------

- Add ignore_fields parameter to ATToDXMixin.install_ftw_file_dx_migration().  [djowett-ftw]


2.3.1 (2020-01-31)
------------------

- Quote URL (including filename) also in file redirect view. [mathias.leimgruber]

- Use z2 Server to be closer to the real world in tests. [mathias.leimgruber]


2.3.0 (2020-01-23)
------------------

- Remove drag and drop upload to reduce support overhead (it only worked in Plone 4). [djowett-ftw]

2.2.6 (2020-01-21)
------------------

- Override content_type method to fix mime_type metadata. [tinagerber]


2.2.5 (2020-01-09)
------------------

- Add ftw.file portal_type translation to plone domain. [tinagerber]


2.2.4 (2019-12-18)
------------------

- Remove JavaScript console statement (YAY) which accidentally added in the prior release. [jone]

- Replace the upload utility with a separate package to prevent conflicts [Nachtalb]


2.2.3 (2019-12-16)
------------------

- Plone 5: provide precompiled bundle. [jone]

- Fix deleting Plone site. [jone]


2.2.2 (2019-11-26)
------------------

- Fix upgrade steps that wouldn't run in 2.x codebase. [djowett-ftw]


2.2.1 (2019-11-25)
------------------

- Fix ConfigurationConflictError occurring when plone.app.widgets added in Plone 4.
  [djowett-ftw]